[project]
name = "openai_priority_loadbalancer"
version = "1.0.5"
authors = [
  { name="Simon Kurtz", email="simonkurtz@gmail.com" },
]
description = "A multi-backend, prioritization load balancer for OpenAI"
readme = "PACKAGE_README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx",
    "python-dateutil"
]
[project.urls]
Homepage = "https://github.com/simonkurtz-MSFT/python-openai-loadbalancer"
Issues = "https://github.com/simonkurtz-MSFT/python-openai-loadbalancer/issues"
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
